# Delivery_Project/Api_Gateway/api/docs/swagger.json
@@ -1465,7 +1465,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "search by name",
+                        "description": "Search by firstname and lastname and phone",
                         "name": "name",
                         "in": "query"
                     },
@@ -1928,8 +1928,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "search by title",
+                        "description": "search by name",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search by tariff_type",
+                        "name": "tariff_type",
                         "in": "query"
                     }
                 ],
@@ -2364,23 +2370,75 @@
                 "summary": "GetAll Order",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
-                        "default": 10,
-                        "description": "limit for response",
+                        "description": "limit",
                         "name": "limit",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "default": 1,
-                        "description": "page for response",
+                        "description": "page",
                         "name": "page",
                         "in": "query"
                     },
                     {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "order_id",
+                        "name": "order_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "client_id",
+                        "name": "client_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "branch_id",
+                        "name": "branch_id",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
-                        "description": "search by title",
-                        "name": "name",
+                        "description": "delivery_type",
+                        "name": "delivery_type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "courier_id",
+                        "name": "courier_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "price_from",
+                        "name": "price_from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "price_to",
+                        "name": "price_to",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "payment_type",
+                        "name": "payment_type",
                         "in": "query"
                     }
                 ],
@@ -2816,7 +2874,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "search",
+                        "description": "search by title",
                         "name": "search",
                         "in": "query"
                     },
@@ -3291,7 +3349,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "search by name",
+                        "description": "search by firstname,lastname and phone",
                         "name": "name",
                         "in": "query"
                     },
@@ -4350,12 +4408,6 @@
                 },
                 "photo": {
                     "type": "string"
-                },
-                "total_orders_count": {
-                    "type": "integer"
-                },
-                "total_orders_sum": {
-                    "type": "number"
                 }
             }
         },
